public/stylesheets/styles.css
/* ... */
@keyframes a-dilate {
  0% {
    opacity: 1;
    transform: scaleX(1);
  }

  50% {
    opacity: 0;
    transform: scaleX(3);
  }

  60% {
    opacity: 0;
    transform: scaleX(1);
  }

  100% {
    opacity: 1;
    transform: scaleX(1);
  }
}

@keyframes a-undilate {
  0% {
    opacity: 1;
    transform: scaleX(1);
  }

  50% {
    opacity: 0;
    transform: scaleX(0.5);
  }

  60% {
    opacity: 0;
    transform: scaleX(1);
  }

  100% {
    opacity: 1;
    transform: scaleX(1);
  }
}

@keyframes a-realize {
  0% { opacity: 1; }
  20% { opacity: 0; }
  80% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes a-realizebg {
  0% { opacity: 0; }
  20% { opacity: 0; }
  30% { opacity: 1; }
  70% { opacity: 1; }
  80% { opacity: 0; }
  100% { opacity: 0; }
}

@keyframes a-text-grow {
  0% { font-size: 1.3rem; }
  50% { font-size: 1.8rem; }
  100% { font-size: 1.3rem; }
}

@keyframes a-text-shrink {
  0% { font-size: 1.8rem; }
  50% { font-size: 1.3rem; }
  100% { font-size: 1.8rem; }
}

@keyframes a-text-crunch {
  0% { font-size: 1.5rem; }
  90% { font-size: 1.5rem; }
  100% { font-size: 0; }
}

@keyframes a-text-flash {
  0% { color: yellow; }
  50% { color: red; }
}

@keyframes a-fade-out {
  0% { opacity: 1; }
  50% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes a-disappear {
  0% { opacity: 1; }
  100% { opacity: 0; }
}

@keyframes a-text-stretch {
  0% { letter-spacing: 0; }
  100% { letter-spacing: 30rem; }
}

.infotooltip {
  display: inline-block;
  position: relative;
}

.infotooltip .infotooltiptext {
  visibility: hidden;
  white-space: nowrap;
  position: absolute;
  left: 105%;
  z-index: 2;
  text-align: left;
  color: #ffffff;
  background-color: black;
  border-radius: var(--var-border-radius, 0.5rem);
  padding: 0.5rem;
}

.infotooltip:hover .infotooltiptext {
  visibility: visible;
}

/*******
 * BEM *
 *******/

.c-game-ui {
  overflow-x: hidden;
  overflow-y: auto;
  width: 100%;
  /* stylelint-disable-next-line unit-allowed-list */
  height: 100vh;
  position: relative;
}

._kong-test .c-game-ui {
  max-height: 100%;
}

/* #region o-primary-btn */

.o-primary-btn {
  height: 2.5rem;
  font-family: Typewriter, serif;
  font-size: 1.3rem;
  font-weight: bold;
  color: var(--color-text);
  background-color: var(--color-base);
  border: 0.1rem solid var(--color-good-dark);
  border-radius: var(--var-border-radius, 0.4rem);
  padding: 0.3rem 1rem;
  transition-duration: 0.2s;
  cursor: pointer;
}

.o-primary-btn:hover {
  color: var(--color-text-inverted);
  background-color: var(--color-good);
}

.o-primary-btn--disabled {
  background-color: #a3a3a3;
  border-color: var(--color-bad);
  cursor: default;
}

.o-primary-btn--disabled:hover {
  background-color: var(--color-bad);
}

/* #region modifiers */

.o-primary-btn--width-medium {
  width: 12rem;
}

.o-primary-btn--subtab-option {
  line-height: 0;
  border: var(--var-border-width, 0.2rem) solid var(--color-accent);
  margin: 0.4rem 0.8rem;
}

.o-primary-btn--subtab-option:hover {
  background-color: var(--color-accent);
}

.o-primary-btn--tickspeed {
  width: 17rem;
  font-size: 1.2rem;
  margin-right: 0.4rem;
}

.o-primary-btn--buy-max {
  width: 12rem;
  font-size: 1.2rem;
}

.o-primary-btn--sacrifice {
  width: 48rem;
  font-size: 1.2rem;
  margin-right: 0.8rem;
}

.o-primary-btn--buy-ad {
  font-size: 1.2rem;
}

.o-primary-btn--buy-ad--small-text {
  vertical-align: middle;
  font-size: 1rem;
  line-height: 0.55rem;
}

.o-primary-btn--buy-ad--small-text-modern {
  font-size: 1rem;
  line-height: 1.2rem;
}

.o-primary-btn--buy-single-ad {
  width: 13.5rem;
}

.o-primary-btn--buy-10-ad {
  width: 21rem;
}

.o-primary-btn--dimboost {
  width: 21rem;
  height: 4.5rem;
  font-size: 0.9rem;
}

.o-primary-btn--galaxy {
  width: 21rem;
  height: 4.5rem;
  font-size: 0.9rem;
}

.o-primary-btn--quick-reset {
  width: 20rem;
  height: 7rem;
  font-size: 1.2rem;
}

.o-primary-btn--buy-id {
  width: 21rem;
  height: 3rem;
}

.o-primary-btn--buy-id--small-text {
  font-size: 1rem;
  line-height: 0.55rem;
}

.o-primary-btn--buy-id--small-text-modern {
  font-size: 1rem;
  line-height: 1.2rem;
}

.o-primary-btn--buy-id-max,
.o-primary-btn--id-autobuyer {
  width: 8rem;
  height: 3rem;
  font-size: 1rem;
}

.o-primary-btn--buy-td {
  width: 21rem;
  height: 3rem;
}

.o-primary-btn--buy-td--small-text {
  font-size: 1rem;
  line-height: 0.55rem;
}

.o-primary-btn--buy-td--small-text-modern {
  font-size: 1rem;
  line-height: 1.2rem;
}

.o-primary-btn--buy-td-max,
.o-primary-btn--td-autobuyer {
  width: 8rem;
  height: 3rem;
  font-size: 1rem;
}

.o-primary-btn--option {
  display: flex;
  flex-direction: column;
  width: 22rem;
  height: 5.5rem;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
}

.o-primary-btn--option-wide {
  width: 24rem;
  height: 5.5rem;
  box-sizing: border-box;
}

.o-primary-btn--option_font-med {
  font-size: 1.4rem;
}

.o-primary-btn--option_font-large {
  font-size: 1.8rem;
}

.o-primary-btn--option_font-x-large {
  font-size: 2rem;
}

.o-primary-btn--slider__slider {
  width: 100%;
}

.o-primary-btn--slider {
  cursor: default;
}

.o-primary-btn--modal-close {
  width: 3rem;
  height: 3rem;
  font-size: 2.4rem;
  line-height: 2.4rem;
  padding: 0;
}

.o-primary-btn--small-spoon {
  font-size: 1rem;
}

.o-primary-btn--replicanti-unlock {
  width: 20rem;
  height: 8rem;
}

.o-primary-btn--replicanti-upgrade {
  width: 18rem;
  height: 5rem;
  font-size: 1rem;
  padding: 0.1rem 0.6rem;
}

.o-primary-btn--replicanti-upgrade-toggle {
  font-size: 1rem;
}

.o-primary-btn--dilation-upgrade-toggle {
  font-size: 1rem;
}

.o-primary-btn--reality-upgrade-toggle {
  font-size: 1rem;
  margin-top: 0.5rem;
}

.o-primary-btn--replicanti-galaxy {
  width: 22rem;
  height: 7rem;
  font-size: 1.2rem;
  padding: 0.1rem 0.6rem;
}

.o-primary-btn--replicanti-galaxy-toggle {
  width: 22rem;
  font-size: 1.2rem;
}
/* ... */

